--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,6 +21,8 @@
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@angular/upgrade": "^6.0.0",
     "core-js": "^2.5.4",
