--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "body-parser": "^1.15.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
